gcc/testsuite/rust/rustc/ui/unconstrained-none.rs
// Issue #5062

fn main() {
    None; // { dg-error ".E0282." "" { target *-*-* } }
}

